# bookstore

./: README.md  pyproject.toml
bookstore/: settings.py  urls.py
order/: factories.py  urls.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializer.py
order/tests/: factories.py
order/tests/test_viewsets/: test_order_viewset.py
product/: factories.py
product/migrations/: 0001_initial.py
product/models/: category.py
product/serializers/: __init__.py  product_serializer.py
product/tests/test_viewsets/: test_product_viewset.py
product/viewsets/: product_viewset.py
