[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "BookStore"
authors = ["th0ma5wu <thomaswu.pro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.3.2"
factory-boy = "^3.3.1"
Django = "^5.1"
djangorestframework = "^3.15.2"
django-extensions = "^3.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
